fixed the text alignment for h3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,89 +63,13 @@ p {
     margin-left: 25px;
 }
 
+/* style for the content div */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
-.benefit-margin {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-/* .benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff; */
-}
-
-/* can't figure out why h3 won't align center */
-.benefit-margin h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-/* .benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-} */
-
-.benefit-margin img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-/* .benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-} */
-
-/* style for the content div */
 .info-breakdown {
     margin-bottom: 20px;
     padding: 50px;
@@ -164,6 +88,35 @@ p {
     font-size: 34px; 
 }
 
+/* style for the benefits div */
+.benefits {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
+}
+
+.benefit-margin {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.benefit-margin h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.benefit-margin img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/* style for the footer */
 .footer {
     padding: 30px;
     clear: both;
